--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
       <div class="pp_box__2 absolute">
         <div class="logo absolute"></div>
+        <div class="pp_box_logo popin absolute"></div>
         <div class="pp_box_cta absolute"></div>
         <div class="pp_box_pack absolute"></div>
         <div class="pp_box_text_2 absolute"></div></div
